Apply generic definitions wherever applicable